keep deck id, draw five more, new deck options

--- a/Lab_28/Views/Home/Index.cshtml
+++ b/Lab_28/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 
 
-@Html.ActionLink("Deal Me In!", "ShuffleAndDeal", new { @class="btn btn-primary"})
+@Html.ActionLink("Deal Me In!", "Deal", new { @class="btn btn-primary"})
 
 
 
