reshuffle at 0 remaining

--- a/Lab_28/Views/Home/Index.cshtml
+++ b/Lab_28/Views/Home/Index.cshtml
@@ -2,9 +2,23 @@
     ViewBag.Title = "Home Page";
 }
 
+<div class="jumbotron">
+    <h1>FIVE CARD DRAW</h1>
+    @*<p class="lead">Register your account today!</p>*@
+    
+    <div style="padding-top: 10px;">
+        <img src="http://deckofcardsapi.com/static/img/aceDiamonds.png" style="width: 180px; height: auto; margin-top: 40px; margin-right: 10px; margin-left: 10px; margin-bottom: 30px;" />
+        <img src="http://deckofcardsapi.com/static/img/KC.png" style="width: 180px; height: auto; margin-top: 40px; margin-right: 10px; margin-left: 10px; margin-bottom: 30px;" />
+        <img src="http://deckofcardsapi.com/static/img/QH.png" style="width: 180px; height: auto; margin-top: 40px; margin-right: 10px; margin-left: 10px; margin-bottom: 30px;" />
+        <img src="http://deckofcardsapi.com/static/img/JS.png" style="width: 180px; height: auto; margin-top: 40px; margin-right: 10px; margin-left: 10px; margin-bottom: 30px;" />
+        <img src="http://deckofcardsapi.com/static/img/0D.png" style="width: 180px; height: auto; margin-top: 40px; margin-right: 10px; margin-left: 10px; margin-bottom: 30px;" />
+        <p><a href="Home/Deal" class="btn btn-primary btn-lg">Play &raquo;</a></p>
+    </div>
+</div>
 
 
-@Html.ActionLink("Deal Me In!", "Deal", new { @class="btn btn-primary"})
+
+
 
 
 
