--- a/Lab_28/Views/Home/DealFive.cshtml
+++ b/Lab_28/Views/Home/DealFive.cshtml
@@ -14,12 +14,41 @@
 else
 {
 
-    for (int i = 0; i < ViewBag.Cards.Count; i++)
 
-    {
-        <img src="@ViewBag.Cards[i].image" style="width: 200px; height: auto; margin-top: 40px; margin-right: 10px; margin-left: 10px;" />
-        
-    }    
+    <table>
+        <tr>
+            <th width="20%"></th>
+            <th width="20%"></th>
+            <th width="20%"></th>
+            <th width="20%"></th>
+            <th width="20%"></th>
+        </tr>
+
+        <tr>
+            @for (int i = 0; i < ViewBag.Cards.Count; i++)
+
+            {
+
+                <td style="padding-bottom: 20px;">
+
+                    <img src="@ViewBag.Cards[i].image" style="width: 200px; height: auto; margin-top: 20px; margin-right: 10px; margin-left: 10px;" />
+                </td>
+
+
+            }
+        </tr>
+        <tr>
+            @for (int i = 0; i < ViewBag.Cards.Count; i++)
+
+            {
+
+                <td style="padding-left: 45px; padding-bottom: 30px;"><b>@ViewBag.Cards[i].value</b> of <b>@ViewBag.Cards[i].suit</b></td>
+            }
+        </tr>
+
+    </table>
+
+    @Html.ActionLink("Draw", "DealFive", "Home", new { @class = "btn btn-primary" })<br />
 
     <b>Remaining Cards: </b>@ViewBag.Remaining<br />
 
