--- a/Lab_28/Views/Shared/_Layout.cshtml
+++ b/Lab_28/Views/Shared/_Layout.cshtml
@@ -16,12 +16,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Card Game", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("5CD", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">  
-                    <li>@Html.ActionLink("New Deck", "Deal", "Home")</li>
-                    <li>@Html.ActionLink("Draw 5 Cards", "DealFive", "Home")</li>
+                    <li>@Html.ActionLink("New Deck", "Deal", "Home")</li>                    
                 </ul>
             </div>
         </div>
@@ -30,7 +29,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - 5CD</p>
         </footer>
     </div>
 
